--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -348,6 +348,8 @@ achievement.botanicaladdons.create_aqua=Blue Sky Fish
 achievement.botanicaladdons.create_aqua.desc=Forge the storm into crystal from the power of Njord
 achievement.botanicaladdons.iridescence=Platinum Disco
 achievement.botanicaladdons.iridescence.desc=Forge Iridescence from the power of Heimdall
+achievement.botanicaladdons.create_fire=Soleil
+achievement.botanicaladdons.create_fire.desc=Forge Embers from the power of Loki (not the dwarf kind)
 
 achievement.botanicaladdons.sacred_life=Eternal Song
 achievement.botanicaladdons.sacred_life.desc=Create the Apples of Immortality from the true power of Idunn
@@ -357,6 +359,8 @@ achievement.botanicaladdons.sacred_aqua=Rising Hero
 achievement.botanicaladdons.sacred_aqua.desc=Create the Arrows of Ascension from the true power of Njord
 achievement.botanicaladdons.sacred_horn=Lost One's Weeping
 achievement.botanicaladdons.sacred_horn.desc=Create Gjallerhorn from the true power of Heimdall
+achievement.botanicaladdons.sacred_flame=Dawn of the Red Sea
+achievement.botanicaladdons.sacred_flame.desc=Create the Fist of Perdition from the true power of Loki
 
 botanicaladdons.potion.faithlessness=Deity's Disfavor
 botanicaladdons.potion.rooted=Rooted
@@ -447,8 +451,43 @@ botanicaladdons.page.heimdall_spells1=The second spell of &3Heimdall&0, &1Wave o
 
 botanicaladdons.entry.garb_heimdall=Priestly Fashion - Heimdall
 botanicaladdons.tagline.garb_heimdall=A different way to move
-botanicaladdons.page.garb_heimdall0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fasionable, provide a tangible benefit. Heimdall's robes make their wearer blink towards their vision whenever they jump while sprinting, giving them a different type of motion.
+botanicaladdons.page.garb_heimdall0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Heimdall's robes make their wearer blink towards their vision whenever they jump while sprinting, giving them a different type of motion.
 botanicaladdons.page.garb_heimdall1=Ever get that feeling of déjà vu?
+
+botanicaladdons.entry.loki=Faith in Loki
+botanicaladdons.tagline.loki=Tricks, traps, and fire
+botanicaladdons.page.loki0=The &4Jötun&0 god of flame, &3Loki&0, seems like a &owonderful&0 god to channel. Wielding his aspect of the &3Divine&0 makes your body resistant to fire, absorbing it into your body. When holding a &1Fire Charge&0, you can fling it like a ghast's breath.
+botanicaladdons.page.loki1=He was fortunate in his deceit
+
+botanicaladdons.entry.loki_spells=Ephemeral Magic
+botanicaladdons.tagline.loki_spells=The art of trickery
+botanicaladdons.page.loki_spells0=The first spell that &3Loki&0's emblem grants, &1Fire Cycle&0, &4Progresses&0 the life of coal, turning it into embers. The legal department of &3Loki&0 would like to remind &3Elucent&0 that this does not constitute a break of license.
+botanicaladdons.page.loki_spells1=The second spell of &3Loki&0, &1Truesight&0, opens your eyes to the traps his followers can set. Each trap will be highlighted with a different form of red wisps.
+botanicaladdons.page.loki_spells2=The third spell of &3Loki&0, &1Aura of Disdain&0, creates an aura of flames. Anything within it will be Everburned for five seconds after they leave the aura.
+botanicaladdons.page.loki_spells3=The fourth and final spell of &3Loki&0, &1Inferno Jet&0, creates a jet of flames which attacks the focused target.
+
+botanicaladdons.entry.garb_loki=Priestly Fashion - Loki
+botanicaladdons.tagline.garb_loki=Sneaking past your defenses
+botanicaladdons.page.garb_loki0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Loki's robes make their wearer unable to trip any of his traps, allowing them safe passage.
+botanicaladdons.page.garb_loki1=Made with quality dwarven rocks
+
+botanicaladdons.entry.traps=Trap Sigils
+botanicaladdons.tagline.traps=Invisible tricks
+botanicaladdons.page.traps0=Traps, made from Loki's flame, can be used to trick and deceive your enemies. Each one has a special effect. Some of them last forever, and others disappear on use. Those which disappear return sixteen when crafting.
+botanicaladdons.page.traps1=The first trap allows you to spin around anyone who walks in it, 90° to the side. This one lasts forever, allowing it to be a permanent fixture of a base.
+botanicaladdons.page.traps2=How can we see if our eyes aren't real
+botanicaladdons.page.traps3=The second trap allows you to create a ring of flame when it's tripped. This one only lasts for one use, so use it wisely.
+botanicaladdons.page.traps4=Alchemy circles
+botanicaladdons.page.traps5=The third trap allows you to launch anyone who trips it. This can be used offensively or as a fixture of a base, as it lasts forever.
+botanicaladdons.page.traps6=Wheeeeeeeeeeee
+botanicaladdons.page.traps7=The fourth trap, which &3Loki&0 reminds you has no connection to the offices of &3Elucent&0, roots down anyone who trips it. As it only lasts once, be prepared to take advantage of it immediately.
+botanicaladdons.page.traps8=Our rooted predates his
+botanicaladdons.page.traps9=The fifth trap blinds and slows anyone who trips it, throwing sand into their vision to accomplish this. It only works once, so strike quickly.
+botanicaladdons.page.traps10=Pocket sand!
+botanicaladdons.page.traps11=The sixth trap is just a pressure plate, but one that doesn't need to be on a block, and can emit strong redstone pulses. It'll work forever, and can even be used to replace a pressure plate in regular bases.
+botanicaladdons.page.traps12=Red stone
+botanicaladdons.page.traps13=The seventh and final trap, the Wrath trap, brings Loki's ire upon anyone who steps in it, highlighting them and giving them their Deity's Disfavor.
+botanicaladdons.page.traps14=He's always angry
 
 botanicaladdons.entry.drab_brew=Brew of Monochromacy
 botanicaladdons.tagline.drab_brew=Negating color
