spin the circle

--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -678,3 +678,8 @@ botanicaladdons.entry.poly_stone=Stone of Assimilation
 botanicaladdons.tagline.poly_stone=Break things your tools won't normally
 botanicaladdons.page.poly_stone0=If a regular &4Manasteel Tool&0 won't do the job, the &1Stone of Assimilation&0 just might. Anything a regular tool can't break quickly, like &1Glass&0 or &1Leaves&0, the Stone of Assimilation can. It works with the &1Ring of Correction&0. It can also be enchanted just like a regular manasteel tool.
 botanicaladdons.page.poly_stone1=We are all stones on this blessed day
+
+botanicaladdons.entry.ragnarok=Contract Breaker
+botanicaladdons.tagline.ragnarok=Spin the black circle
+botanicaladdons.page.ragnarok0=Spin the crackling circle from the waking &1æther&0 of &3Heimdall&0, yellow as the blood of gods. Spin it through the waking &1seas&0 of &3Njord&0, blue as the deepest oceans. Spin it under the waking &1skies&0 of &3Thor&0, green as the grass of plains. Spin it with the waking &1flames&0 of &3Loki&0, red as the blood from which they're born. Spin it to the waking &1land&0 of &3Idunn&0, brown as the deepest dirt, and back to your beginning.
+botanicaladdons.page.ragnarok1=Offer their souls, and burn forth a token, and may ye see the &3end&0.
