--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -481,7 +481,7 @@ botanicaladdons.page.loki_spells3=The fourth and final spell of &3Loki&0, &1Infe
 
 botanicaladdons.entry.garb_loki=Priestly Fashion - Loki
 botanicaladdons.tagline.garb_loki=Sneaking past your defenses
-botanicaladdons.page.garb_loki0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Loki's robes make their wearer unable to trip any of his traps, allowing them safe passage.
+botanicaladdons.page.garb_loki0=No priest would be caught dead without a ceremonial robe, although robes aren't actually required to pay allegiance to a divinity.<br>These robes, beyond being fashionable, provide a tangible benefit. Loki's robes make their wearer unable to trip any of his traps, allowing them safe passage. Loki's typical tricks, like fire and explosives, also won't touch the wearer.
 botanicaladdons.page.garb_loki1=Made with quality dwarven rocks
 
 botanicaladdons.entry.traps=Trap Sigils
