--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -268,7 +268,7 @@ item.botanicaladdons:sunmaker_helm.name=Helm of the Sunmaker
 item.botanicaladdons:sunmaker_chest.name=Chestplate of the Sunmaker
 item.botanicaladdons:sunmaker_legs.name=Platelegs of the Sunmaker
 item.botanicaladdons:sunmaker_boots.name=Greaves of the Sunmaker
-botanicaladdons.armorset.sunmaker.name=Commander's Aura
+botanicaladdons.armorset.sunmaker.name=Light of Creation
 botanicaladdons.armorset.sunmaker.desc=20%% less Mana cost on Mana Tools and Rods
 botanicaladdons.armorset.sunmaker.desc1=Repairs your held items with Mana
 
@@ -276,9 +276,9 @@ item.botanicaladdons:fenris_helm.name=Helm of Fenris
 item.botanicaladdons:fenris_chest.name=Chestplate of Fenris
 item.botanicaladdons:fenris_legs.name=Platelegs of Fenris
 item.botanicaladdons:fenris_boots.name=Greaves of Fenris
-botanicaladdons.armorset.fenris.name=Prince of Monsters
+botanicaladdons.armorset.fenris.name=Soul Unbound
 botanicaladdons.armorset.fenris.desc=20%% less Mana cost on Mana Tools and Rods
-botanicaladdons.armorset.fenris.desc1=Gain the strength of Fenris
+botanicaladdons.armorset.fenris.desc1=Gain the strength of the Prince of Monsters
 
 item_group.botanicaladdons.divine=Natural Pledge
 
