--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -260,6 +260,7 @@ item.botanicaladdons:eclipse_helm.name=Helm of Eclipse
 item.botanicaladdons:eclipse_chest.name=Chestplate of Eclipse
 item.botanicaladdons:eclipse_legs.name=Platelegs of Eclipse
 item.botanicaladdons:eclipse_boots.name=Greaves of Eclipse
+item.botanicaladdons:flarebringer.name=Flarebringer the Bane
 botanicaladdons.armorset.eclipse.name=Mana Masquerade
 botanicaladdons.armorset.eclipse.desc=20%% less Mana cost on Mana Tools and Rods
 botanicaladdons.armorset.eclipse.desc1=Repairs from the Mana of others around you
@@ -268,6 +269,7 @@ item.botanicaladdons:sunmaker_helm.name=Helm of the Sunmaker
 item.botanicaladdons:sunmaker_chest.name=Chestplate of the Sunmaker
 item.botanicaladdons:sunmaker_legs.name=Platelegs of the Sunmaker
 item.botanicaladdons:sunmaker_boots.name=Greaves of the Sunmaker
+item.botanicaladdons:shadowbreaker.name=Shadowbreaker the Aegis
 botanicaladdons.armorset.sunmaker.name=Light of Creation
 botanicaladdons.armorset.sunmaker.desc=20%% less Mana cost on Mana Tools and Rods
 botanicaladdons.armorset.sunmaker.desc1=Repairs your held items with Mana
@@ -276,6 +278,7 @@ item.botanicaladdons:fenris_helm.name=Helm of Fenris
 item.botanicaladdons:fenris_chest.name=Chestplate of Fenris
 item.botanicaladdons:fenris_legs.name=Platelegs of Fenris
 item.botanicaladdons:fenris_boots.name=Greaves of Fenris
+item.botanicaladdons:nightscourge.name=Nightscourge the Ravager
 botanicaladdons.armorset.fenris.name=Soul Unbound
 botanicaladdons.armorset.fenris.desc=20%% less Mana cost on Mana Tools and Rods
 botanicaladdons.armorset.fenris.desc1=Gain the strength of the Prince of Monsters
@@ -543,7 +546,7 @@ botanicaladdons.page.foodbelt1=Strength before weakness
 
 botanicaladdons.entry.travel_stone=Traveller's Flowstone
 botanicaladdons.tagline.travel_stone=A component sash
-botanicaladdons.page.travel_stone0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Flowstone&0. As a traveller may use belts other than the &1Sashes&0, it gives you the little quirks that make those belts so useful without sacrificing leisure. Specifically, it makes you jump higher and scale small walls.
+botanicaladdons.page.travel_stone0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Flowstone&0. As a traveller may use belts other than the &1Sashes&0, it gives you the little quirks that make those belts so useful without sacrificing leisure. Specifically, it makes you jump higher and scale small walls. However, it only makes you jump higher while sneaking.
 botanicaladdons.page.travel_stone1=Life before death
 
 botanicaladdons.entry.find_stone=Traveller's Waystone
