--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -405,7 +405,7 @@ achievement.botanicaladdons.ragnarok=Celestial Symphony
 achievement.botanicaladdons.ragnarok.desc=Call forth the blood of gods
 
 achievement.botanicaladdons.begin_ragnarok=The 13th Apocalypse
-achievement.botanicaladdons.begin_ragnarok.desc=Prove that gods can be slain
+achievement.botanicaladdons.begin_ragnarok.desc=Draw forth the blood of gods
 
 botanicaladdons.potion.faithlessness=Deity's Disfavor
 botanicaladdons.potion.rooted=Rooted
