--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -459,7 +459,7 @@ botanicaladdons.page.idunn1=Ash sunk down of alfen race
 botanicaladdons.entry.idunn_spells=Life Magic
 botanicaladdons.tagline.idunn_spells=The art of growth
 botanicaladdons.page.idunn_spells0=The first spell that &3Idunn&0's emblem grants, &1Shield of Roots&0, is a powerful protection spell. While you have the &1Terrestrial Focus&0, for half a minute you will be unable to move, take, or deal melee damage. Giving the &1Focus&0 to someone else in that time will treat them as if they had been the one to cast the spell.
-botanicaladdons.page.idunn_spells1=The secgond and final spell of &3Idunn&0, &1Life Catalyst&0, forces power into livingwood, twisting it to become &1Soulroot&0. If you can somehow augment your emblem's power, the root's lifeforce might be more potent.
+botanicaladdons.page.idunn_spells1=The second and final spell of &3Idunn&0, &1Life Catalyst&0, forces power into livingwood, twisting it to become &1Soulroot&0. If you can somehow augment your emblem's power, the root's lifeforce might be more potent.
 
 botanicaladdons.entry.garb_idunn=Priestly Fashion - Idunn
 botanicaladdons.tagline.garb_idunn=Head on or backstab
