--- a/src/main/resources/assets/naturalpledge/lang/en_us.lang
+++ b/src/main/resources/assets/naturalpledge/lang/en_us.lang
@@ -713,12 +713,12 @@ naturalpledge.page.ender_actuator1=Not a tessaract
 
 naturalpledge.entry.sleep_stone=Stone of Meditation
 naturalpledge.tagline.sleep_stone=Sleep far away from a base
-naturalpledge.page.sleep_stone0=When travelling far away from home, it can often be hard to seep to accelerate the night. If you use a &1Stone of Meditation&0, it allows you to simulate sleep from far away from a base. Hold it and you'll begin to meditate, simulating sleep in a &1Bed&0.
+naturalpledge.page.sleep_stone0=When travelling far away from home, it can often be hard to sleep to accelerate the night. If you use a &1Stone of Meditation&0, it allows you to simulate sleep from far away from a base. Hold it and you'll begin to meditate, simulating sleep in a &1Bed&0.
 naturalpledge.page.sleep_stone1=Peer into the Spirit
 
 naturalpledge.entry.nether_stone=Stone of Nether Fracture
 naturalpledge.tagline.nether_stone=Point to your last portal
-naturalpledge.page.nether_stone0=The &1Stone of Nether Fracture&0 acts like a &1Traveller's Waystone&0, except it points directly to the last &4Nether Portal&0 you stepped through. Like the &1Stone of Return&0, shift-clicking in the air will lear its destination.
+naturalpledge.page.nether_stone0=The &1Stone of Nether Fracture&0 acts like a &1Traveller's Waystone&0, except it points directly to the last &4Nether Portal&0 you stepped through. Like the &1Stone of Return&0, shift-clicking in the air will clear its destination.
 naturalpledge.page.nether_stone1=Keralian resonance
 
 naturalpledge.entry.poly_stone=Stone of Assimilation
